[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menus/2-3.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/Menus/7-1.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Menus/cave.jpg" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Menus/7-3.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/Menus/new_theme.tres" type="Theme" id=7]
[ext_resource path="res://Sprites/Menus/7-2.png" type="Texture2D" id=8]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=9]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( -930, -839 )
theme = ExtResource( 7 )
script = ExtResource( 9 )

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2( 555.25, 341.25 )
scale = Vector2( 1, 0.8 )
texture = ExtResource( 5 )

[node name="Contenedor" type="Sprite2D" parent="."]
position = Vector2( 527, 317 )
texture = ExtResource( 1 )

[node name="Titulo" type="Label" parent="Contenedor"]
offset_left = -113.0
offset_top = -237.0
offset_right = 120.0
offset_bottom = -169.0
text = "INICIAR SESION"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Usuario" type="LineEdit" parent="Contenedor"]
offset_left = -103.0
offset_top = -113.0
offset_right = 104.0
offset_bottom = -80.0
clear_button_enabled = true
placeholder_text = "Pon tu usuario"
caret_blink = true

[node name="Label" type="Label" parent="Contenedor/Usuario"]
offset_left = 1.0
offset_top = -29.0
offset_right = 97.0
offset_bottom = -3.0
text = "Usuario:"

[node name="btnAceptar" type="TextureButton" parent="Contenedor"]
offset_left = -88.0
offset_top = 103.0
offset_right = 92.0
offset_bottom = 143.0
pivot_offset = Vector2( -444, -182 )
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Contenedor/btnAceptar"]
offset_left = -2.0
offset_top = -2.0
offset_right = 177.0
offset_bottom = 32.0
text = "Inicia Sesion"
align = 1
valign = 1
autowrap = true

[node name="Contrasena" type="LineEdit" parent="Contenedor"]
offset_left = -104.0
offset_top = -47.0
offset_right = 104.0
offset_bottom = -11.0
secret = true
placeholder_text = "Pon tu contrasena"

[node name="Label" type="Label" parent="Contenedor/Contrasena"]
offset_left = 1.0
offset_top = -25.0
offset_right = 133.0
offset_bottom = 1.0
text = "Contrasena:"

[node name="btnRegistrarse" type="TextureButton" parent="Contenedor"]
offset_left = -89.0
offset_top = 148.0
offset_right = 91.0
offset_bottom = 188.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Contenedor/btnRegistrarse"]
offset_left = -2.0
offset_top = -2.0
offset_right = 177.0
offset_bottom = 32.0
text = "Registrarse"
align = 1
valign = 1
autowrap = true

[node name="Avisos" type="Label" parent="Contenedor"]
offset_left = -103.0
offset_top = -16.0
offset_right = 105.0
offset_bottom = 94.0
align = 1
valign = 1
autowrap = true

[node name="btnVolver" type="TextureButton" parent="Contenedor"]
offset_left = -88.0
offset_top = 192.0
offset_right = 92.0
offset_bottom = 232.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 8 )

[node name="Label" type="Label" parent="Contenedor/btnVolver"]
offset_left = 2.0
offset_top = -1.0
offset_right = 181.0
offset_bottom = 33.0
text = "Menu"
align = 1
valign = 1
autowrap = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 524, 307.5 )
zoom = Vector2( 0.9, 0.9 )

[connection signal="focus_entered" from="Contenedor/Usuario" to="." method="_on_Usuario_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Usuario" to="." method="_on_Usuario_mouse_entered"]
[connection signal="focus_entered" from="Contenedor/btnAceptar" to="." method="_on_btnAceptar_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnAceptar" to="." method="_on_btnAceptar_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnAceptar" to="." method="_on_btnAceptar_pressed"]
[connection signal="focus_entered" from="Contenedor/Contrasena" to="." method="_on_Contrasena_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/Contrasena" to="." method="_on_Contrasena_mouse_entered"]
[connection signal="focus_entered" from="Contenedor/btnRegistrarse" to="." method="_on_btnRegistrarse_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnRegistrarse" to="." method="_on_btnRegistrarse_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnRegistrarse" to="." method="_on_btnRegistrarse_pressed"]
[connection signal="focus_entered" from="Contenedor/btnVolver" to="." method="_on_btnVolver_focus_entered"]
[connection signal="mouse_entered" from="Contenedor/btnVolver" to="." method="_on_btnVolver_mouse_entered"]
[connection signal="pressed" from="Contenedor/btnVolver" to="." method="_on_btnVolver_pressed"]
